--- a/chart-jke-1-common/values.yaml
+++ b/chart-jke-1-common/values.yaml
@@ -2,12 +2,9 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-# Namespace
 nameSpace: hcl-app
 
-# Docker image pull secret
-dockerImagePullSecretName: hcl-app-pull-secret
-dockerImagePullSecretValue: eyJhdXRocyI6eyJteWNsdXN0ZXJoY2wzLmljcDo4NTAwIjp7InVzZXJuYW1lIjoiYWRtaW4iLCJwYXNzd29yZCI6ImFkbWludGgiLCJlbWFpbCI6Im51bGwiLCJhdXRoIjoiWVdSdGFXNDZZV1J0YVc1MGFBPT0ifX19
+dockerRegistrySecret: hcl-app-pull-secret
 
 # API service URL for interest rate
 jkeApiServiceUrlAll: https://api-apic.in.ibm.com/hcl-demo-org/dev/interest-rates
@@ -20,24 +17,26 @@ serverPortMQ: 8046
 serverPortAPI: 8047
 serverPortBankStreet: 8048
 
-# DB Properties
-dbType: db2
-dbPotocol: jdbc:db2
+# DB Probs- Secret
 dbHostName: 9.184.115.97
 dbPort: 60000
-dbName: gisdb
-dbUsername: db2inst1
 dbPassword: root123
 
-# MQ Properties
-mqQueueManager: QM1
-mqChannel: DEV.APP.SVRCONN
+# DB Probs- configmap
+dbType: db2
+dbPotocol: jdbc:db2
+dbName: gisdb
+dbUsername: db2inst1
+
+# MQ Probs- Secret
 mqHostName: 9.121.242.180
 mqPort: 31132
-mqUser: admin
 mqPassword: passw0rd
 
-# MQ Properties
+# MQ Probs- configmap
+mqQueueManager: QM1
+mqChannel: DEV.APP.SVRCONN
+mqUser: admin
 mqQueueNameReq: JKE.ACCT.REQ
 mqQueueNameInt: JKE.ACCT.INT
 mqQueueNameRes: JKE.ACCT.RES
